Fix module review titles

--- a/nus/CP2106.md
+++ b/nus/CP2106.md
@@ -1,3 +1,7 @@
+---
+title: CP2106 Review
+---
+
 Taken in May-Aug 2018.  This module is taken over the summer break, but MCs are credited in semester 1 of the following year.
 
 This module is "independent" to the fullest extent of the word.  It is pair work (you can choose your partner), and you have the freedom to work on any software project that you would like to do, and with any kinds of technologies.  You can choose how easy or how difficult you want your project to be - it really depends on what you are interested in and what you want to achieve.  Most students choose to do web apps, but you can also do mobile or desktop applications or games, or even hardware projects that work with micro-controllers.
