--- a/nus/CS1231.md
+++ b/nus/CS1231.md
@@ -1,3 +1,7 @@
+---
+title: CS1231 Review
+---
+
 Taken in AY17/18 Sem 1 under Prof Terence Sim Mong Cheng and Prof Aaron Tan Tuck Choy (School of Computing).
 
 This module is a logic/mathematical module which introduces students to mathematical proofs.  It dabbles with various topics such as propositional logic, number theory, sets, relations & functions, permutations & combinations, probability, and graphs.  Students are expected to be able to be able to reason logically, comprehend mathematical proofs, and write proofs of their own.
