--- a/nus/CS2101.md
+++ b/nus/CS2101.md
@@ -1,3 +1,7 @@
+---
+title: CS2101 Review
+---
+
 Taken in AY18/19 Sem 1.  Tutored by Ms Diana Chung; module coordinated by Ms Anita Toh.
 
 This module is taken by computer science students together with CS2103T to fulfil SoC requirements.  It is coordinated and run by staff from the Centre for English Language Communication (CELC).  The first half of the semester teaches general communication and workplace interaction skills, while the second half of the semester is heavily linked to the software engineering project from CS2103T (such as writing user/developer guides and making presentations for the CS2103T project).
