--- a/nus/CS2103T.md
+++ b/nus/CS2103T.md
@@ -1,3 +1,7 @@
+---
+title: CS2103T Review
+---
+
 Taken in AY18/19 Sem 1 under Prof Damith Chatura Rajapakse.
 
 This module is the first group software project for computer science students.  For most computer science students, this module is twinned with CS2101.  Some students that are enrolled in special programmes (such as the University Scholars Programme, or a double degree programme where SoC is not their home faculty) often do not need to take CS2101.  CS2103T is the twinned version of this module, while CS2103 is the non-twinned version.  Lectures and exams are combined and they are identical for CS2103 and CS2103T students.  However, CS2103T students form project groups with other CS2103T students only, because the same project group is required for CS2101.  Project groups are typically formed during the first CS2101 class.
