--- a/nus/CS2104.md
+++ b/nus/CS2104.md
@@ -1,3 +1,7 @@
+---
+title: CS2104 Review
+---
+
 Taken in AY19/20 Sem 1 under Prof Chin Wei Ngan.
 
 The first half of the semester is on functional programming using Haskell, covering various concepts including pureness, abstract data types, higher order functions, functors, monads, and parsers.  Haskell-specific concepts include typeclasses and the Parsec library.
