--- a/nus/CS2106.md
+++ b/nus/CS2106.md
@@ -1,3 +1,7 @@
+---
+title: CS2106 Review
+---
+
 Taken in AY18/19 Sem 1 under Prof Soo Yuen Jien (aka Uncle Soo).
 
 This module covers the various parts that come together to form an operating system, including process and memory management, file systems, and synchronization (e.g. semaphores, mutexes).  It explains why each process on your computer can execute independently of all the other processes.  Some C programming knowledge is assumed - CS2100's coverage of C is generally sufficient, but more experience with C will make lab assignments easier.
