--- a/nus/CS3210.md
+++ b/nus/CS3210.md
@@ -1,3 +1,7 @@
+---
+title: CS3210 Review
+---
+
 Taken in AY18/19 Sem 1 under Prof Cristina Carbunaru.
 
 This module is an expository module to parallel computing and the various parallel architectures in use today.  Many topics are covered, but with little depth in each topic.  In the earlier part of the semester, threads and synchronization are covered, and this overlaps somewhat with CS2106.  Different parallel programming models are discussed to give students an overview of the current state of parallel computing.  OpenMP, MPI, and CUDA programming are covered (with a programming assignment in each of these paradigms).  Basic overviews of memory consistency and network interconnections are also covered, but without any formal mathematical proofs.
