--- a/nus/CS3230.md
+++ b/nus/CS3230.md
@@ -1,3 +1,7 @@
+---
+title: CS3230 Review
+---
+
 Taken in AY18/19 Sem 1 under Prof Chang Ee Chien.
 
 This module is a largely mathematical and theoretical module that covers topics such as big-O notation, sorting/searching, graphs, NP-completeness, and associated algorithms in those areas.  Proofs of the various algorithms discussed are covered, and students are expected to devise algorithms and write some proofs in the exam.
