--- a/nus/CS4215.md
+++ b/nus/CS4215.md
@@ -1,3 +1,7 @@
+---
+title: CS4215 Review
+---
+
 Taken in AY19/20 Sem 2 under Prof Martin Henz.  Modules in this semester were affected by the COVID-19 pandemic, and were required to end one week earlier than usual (i.e. week 13 was cancelled).
 
 All classes (both lectures and labs) could be attended online from early in the semester, going beyond the social distancing measures that were mandated by the school.
