--- a/nus/CS4231.md
+++ b/nus/CS4231.md
@@ -1,3 +1,7 @@
+---
+title: CS4231 Review
+---
+
 Taken in AY18/19 Sem 2 under Prof Yu Haifeng.
 
 This module covers the theoretical foundation of shared-memory and distributed-memory systems.  Focus is placed on the formal definitions of key concepts in such systems, as well as the algorithms associated with those concepts.  Topics for shared-memory systems include: critical sections (Peterson's, Lamport's bakery, and Dekker's algorithms), semaphores, monitors, and memory consistency.  Topics for distributed-memory systems include: clocks, consistent global snapshots, causal order, total order (Skeen's algorithm), leader election, consensus (FLP theorem), and self-stabilisation.
