--- a/nus/CS4232.md
+++ b/nus/CS4232.md
@@ -1,3 +1,7 @@
+---
+title: CS4232 Review
+---
+
 Taken in AY20/21 Sem 1 under Prof Sanjay Jain.  All lectures were recorded, and one of the tutorial groups was conducted online.
 
 This module can be roughly split into four parts (in chronological order):
