--- a/nus/CS4234.md
+++ b/nus/CS4234.md
@@ -1,3 +1,7 @@
+---
+title: CS4234 Review
+---
+
 Taken in AY19/20 Sem 1 under Prof Steven Halim.
 
 The first few weeks of this module introduces a number of NP-hard problems, including the vertex cover, set cover, Steiner tree, and travelling salesman problems.  This is followed by a few weeks of maximum flow and matching algorithms.  The last part of the module discusses stochastic local search and related heuristics.
