--- a/nus/CS4261.md
+++ b/nus/CS4261.md
@@ -1,3 +1,7 @@
+---
+title: CS4261 Review
+---
+
 Taken in AY19/20 Sem 1 under Prof Yair Zick.
 
 This module is a so-called "mezzanine" module - it is dual-coded, undergraduate students take the module as CS4261 and postgraduate students take this module as CS5461.  CS4261 students take a final exam, while CS5461 students do a pair project in place of the final exam.  (I did CS4261.)
