--- a/nus/ES2660.md
+++ b/nus/ES2660.md
@@ -1,3 +1,7 @@
+---
+title: ES2660 Review
+---
+
 Taken in AY17/18 Sem 2.  Tutored by Ms Chew Ping Lin; module coordinated by Ms Lee Gek Ling.
 
 This module is a programme requirement for computer science majors, and is conducted by the Centre for English Language Communication (CELC).  The main aim of this module seems to be to train students to be critical thinkers.  There are no midterms or finals for this module.
