--- a/nus/GEQ1000.md
+++ b/nus/GEQ1000.md
@@ -1,3 +1,7 @@
+---
+title: GEQ1000 Review
+---
+
 Taken in AY18/19 Sem 1.
 
 This is a compulsory module for all students (regardless of faculty), and all lectures are online.  Face-to-face tutorials are conducted fortnightly.
