--- a/nus/GER1000.md
+++ b/nus/GER1000.md
@@ -1,3 +1,7 @@
+---
+title: GER1000 Review
+---
+
 Taken in AY17/18 Sem 2.
 
 This is a compulsory module for all students (regardless of faculty), and all lectures are online.  Face-to-face tutorials are conducted fortnightly.
