--- a/nus/GES1019.md
+++ b/nus/GES1019.md
@@ -1,3 +1,7 @@
+---
+title: GES1019 Review
+---
+
 Taken in AY17/18 Sem 1 under Prof Lee Siew Eang (first half of module) and Prof Shah Kwok Wei (second half of module).  Two lectures were taught by Prof Teo Ho Pin (Mayor of North West CDC and MP of Bukit Panjang SMC).
 
 This is the first time that Prof Shah and Prof Teo co-conducted this module with Prof Lee.  Previously, Prof Lee taught the whole module.
