--- a/nus/IS1103.md
+++ b/nus/IS1103.md
@@ -1,3 +1,7 @@
+---
+title: IS1103 Review
+---
+
 Taken in AY17/18 Sem 2 under Prof Yang Lu and Prof Anand Ramchand.
 
 This is an introductory module to various modern IT systems used in the corporate world.  Ethical considerations are also discussed in the later part of the semester.  This module is one of the few "soft" modules that are compulsory for computer science majors; as such, many plan to use the S/U option for this module.  The workload of this module is relatively little compared to ES2660, which is another "soft" module compulsory for computer science majors.
