--- a/nus/MA2101.md
+++ b/nus/MA2101.md
@@ -1,3 +1,7 @@
+---
+title: MA2101 Review
+---
+
 Taken in AY17/18 Sem 1 under Prof Zhang De-Qi.
 
 Prof Zhang demonstrates a very strong mathematical understanding on the course material and beyond, and there is no doubt in his knowledge in Linear Algebra.  He is able to critique students' questions in class and in forums in a logical and mathematical manner.
