--- a/nus/MA2104.md
+++ b/nus/MA2104.md
@@ -1,3 +1,7 @@
+---
+title: MA2104 Review
+---
+
 Taken in AY17/18 Sem 2 under Prof Tan Ser Peow.
 
 This is a module where the lecturer uses umbrellas, tennis balls, and (significantly) multiple types of cake as teaching tools during lecture.  Prof Tan tries to give physical meaning to the mathematical quantities that are investigated, and this is helpful in giving students some intuition of what the mathematical quantities represent.  (Also, we get to eat the cake.)
