--- a/nus/MA2108S.md
+++ b/nus/MA2108S.md
@@ -1,3 +1,7 @@
+---
+title: MA2108S Review
+---
+
 Taken in AY18/19 Sem 2 under Prof Sun Rongfeng.
 
 This module starts off by introducing metric spaces, and then covers concepts such as limit points, compactness, connectedness, and convergence.  These concepts are taught using general metric spaces (not specifically real or complex numbers), and hence overlap somewhat with the content of MA3209 Mathematical Analysis III.  A good intuition and an ability to make sense of abstract concepts will be useful in this part of the module.
