--- a/nus/MA2214.md
+++ b/nus/MA2214.md
@@ -1,3 +1,7 @@
+---
+title: MA2214 Review
+---
+
 Taken in AY19/20 Sem 1 under Prof Tan Ban Pin.
 
 The first half of the module covers combinatorics (permutations & combinations, principle of inclusion and exclusion, generating functions, recurrence relations), and the second half of the module covers basic graph theory (terminology, adjacency matrices, trees, spanning trees, Kruskal's algorithm, Dijkstra's algorithm, chromatic number).  The two halves are distinctly separated - it is almost as if two separate modules were combined.
