--- a/nus/MA3218.md
+++ b/nus/MA3218.md
@@ -1,3 +1,7 @@
+---
+title: MA3218 Review
+---
+
 Taken in AY18/19 Sem 1 under Prof Leung Ka Hin.
 
 The primary focus of this module is algebraic structures such as groups, rings, and fields.  Despite what the module description might suggest, most of the module is taught like a conventional algebra module (i.e. with focus on proofs related to groups, rings, and fields).  Only about three weeks of lectures deal with coding theory and the applications of these algebraic structures.
