--- a/nus/MA3233.md
+++ b/nus/MA3233.md
@@ -1,3 +1,7 @@
+---
+title: MA3233 Review
+---
+
 Taken in AY19/20 Sem 2 under Prof Wang Fei.  Modules in this semester were affected by the COVID-19 pandemic, and were required to end one week earlier than usual (i.e. week 13 was cancelled).  Final exams were required to be held online using video conferencing software.
 
 This module covers graph theory topics such as spanning trees, bipartite graphs, Eulerian and Hamiltonian graphs, connectivity, matching, and colouring.  Planar graphs was planned for the final week of the semester, but was cancelled due to the pandemic.  Despite the name of this module, this module is really only on graph theory.  Combinatorics is only used where necessary to prove some theorems in graph theory.
