--- a/nus/MA4270.md
+++ b/nus/MA4270.md
@@ -1,3 +1,7 @@
+---
+title: MA4270 Review
+---
+
 Taken in AY20/21 Sem 1 under Prof Jonathan Mark Scarlett.  Due to the COVID-19 pandemic, there were no physical lectures, and webcasts of the previous semester were provided instead.  Tutorials were conducted on Zoom and recorded.
 
 This module is an introduction to machine learning.  It starts off with linear binary classification (perceptron algorithm, support-vector machines, logistic regression), and then moves on to linear regression.  The latter half of the semester covers non-linear machine learning, such as the kernel method, convex optimisation, and boosting (AdaBoost algorithm).  Towards the end of the semester, there is a small chapter on "probably approximately correct" guarantees, and another small chapter on k-means clustering.  The module does not go very deeply into most of the topics covered, and most of the chapters in the latter half of the semester are relatively self-contained.
