--- a/nus/ST2131.md
+++ b/nus/ST2131.md
@@ -1,3 +1,7 @@
+---
+title: ST2131 Review
+---
+
 Taken in AY19/20 Sem 1 under Prof Sun Rongfeng.
 
 This module is taught by the Department of Mathematics in semester 1, and by the Department of Statistics and Applied Probability in semester 2.  Students' experience may differ greatly depending on the department that is conducting this module.
