--- a/nus/CS2030.md
+++ b/nus/CS2030.md
@@ -1,3 +1,7 @@
+---
+title: CS2030 Review
+---
+
 Taken in AY17/18 Sem 1 under Prof Ooi Wei Tsang.  This is the first time this module is offered.
 
 Prof Ooi is able to illustrate the programming concepts of this module clearly and with adequate examples.
