--- a/nus/CS4212.md
+++ b/nus/CS4212.md
@@ -1,3 +1,7 @@
+---
+title: CS4212 Review
+---
+
 Taken in AY20/21 Sem 1 under Prof Wong Weng Fai.  Due to the COVID-19 pandemic, all lectures and tutorials were livestreamed via Zoom, and students could either attend in person or online.  However, the final quiz required students to physically come to class.
 
 This module covers all the main aspects of a compiler.
