--- a/nus/MA1521.md
+++ b/nus/MA1521.md
@@ -1,3 +1,7 @@
+---
+title: MA1521 Review
+---
+
 Taken in AY17/18 Sem 1 under Prof Chew Tuan Seng.
 
 Prof Chew is able to articulate the concepts and formulae necessary for this module clearly.  However, lectures are generally unengaging and slow and hence may put students to sleep.  Webcast is available for this module.
