--- a/nus/MA2213.md
+++ b/nus/MA2213.md
@@ -1,3 +1,7 @@
+---
+title: MA2213 Review
+---
+
 Taken in AY19/20 Sem 1 under Prof Cai Zhenning.
 
 This module covers various numerical methods with the intent of implementation on a computer.  The first four weeks of the module lay the foundation for computer arithmetic: floating point representation, finite-digit arithmetic, and numerical error.  Subsequently, various numerical methods are discussed: Gaussian elimination, LU matrix factorisation, Lagrange interpolation, divided differences, spline interpolation, least squares approximation, and Newton-Cotes formulas.  Many of these numerical methods are standalone chapters that do not depend on one another.
